fixed theme slider position on mobile devices

--- a/sass/_goingDark.scss
+++ b/sass/_goingDark.scss
@@ -52,7 +52,7 @@
     width: 20px;
     cursor: pointer;
     z-index: 10;
-    top: 3px;
+    top: 4px;
     transition: fill 0.25s ease-in-out;
   }
 
