--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,4 +1,4 @@
-$screen-sm-max: 576px;
+$screen-sm-max: 800px;
 $screen-sm-min: 577px;
 
 @mixin skinny-hr {
