--- a/sass/style.scss
+++ b/sass/style.scss
@@ -102,7 +102,13 @@ hr {
   align-items: flex-start;
 
   .theme-switcher {
-    margin-left: 70%;
+    @include sm {
+      display: inline-block;
+      top: 0;
+      right: 0;
+      position: absolute;
+      margin: 2rem 2rem 0 0;
+    }
   }
 }
 .bottom-menu {
